@@ -27,7 +27,7 @@ if ($ARGV[2]) {
 
 # Don't forget to update also the list in config.proto
 my $nonlatin = ' am ara ben bd bg bt by deva ge gh gr guj guru \
-                 il in ir iku kan kh kz la lao lk mk mm mn mv mal \
+                 il in ir iku kan kh kz la lao lk kg mk mm mn mv mal \
                  ori pk ru scc sy syr tel th tj tam ua uz ';
 
 my %keymaps;
