@@ -14,6 +14,7 @@ console-setup (1.35) UNRELEASED; urgency=low
     closes: #528033.
   * Support unset font in Debconf configurator.  Thanks Dave Witbrodt,
     closes: #527641.
+  * Kyrgyz keyboard is non-latin.  Proper defaults with ky_KG locale.
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 05 May 2009 18:17:23 +0100
 
